# TritonAMR

./: CMakeLists.txt  README.md
examples/exemple1/: us_bound_cond.f90  us_critere_raffinement_2d.f90  us_critere_raffinement_3d.f90  us_init_advection.f90  us_init_bulle.f90  us_miseajour_advection.f90
examples/exemple2/: TritonAMR.data
ihm/: CMakeLists.txt  MainFrame.java
modules/: CMakeLists.txt  mod_PointerReshape.f90  mod_advection.f90  mod_discretisation.f90  mod_elliptique.f90  mod_hgsarray.f90  mod_hgsparam.f90  mod_hgssave.f90  mod_user.f90  mod_visu.f90
scripts/: tritonAMR.py
src/: CMakeLists.txt
src/base/: CMakeLists.txt  main.f90
src/base/advection/: CMakeLists.txt  F_EXEC_LAGOUTIERE.f90  F_EXEC_UPWIND.f90  bound_cond.f90  calcul_decentre_aval_sous_contraintes_des_flux_de_Y_1_x.f90  calcul_decentre_aval_sous_contraintes_des_flux_de_Y_1_y.f90  calcul_decentre_aval_sous_contraintes_des_flux_de_Y_1_z.f90  calcul_du_pas_de_temps.f90  calcul_upwind_des_flux_de_Y_1_x.f90  calcul_upwind_des_flux_de_Y_1_y.f90  calcul_upwind_des_flux_de_Y_1_z.f90  calcul_volume_epaisseur_interface.f90  mc_init_advection_2D.f90  mc_init_advection_3D.f90  mc_init_bulle_2D.f90  mc_init_bulle_3D.f90  mc_init_compute_3D.f90  mise_a_jour_vitesse_2D.f90  mise_a_jour_vitesse_3D.f90  solveur_advection_YY.f90
src/base/amr/: CMakeLists.txt  amr_dimdom.f90  amr_driv_LDC.f90  amr_driv_uns_solver_meth_1.f90  amr_driv_uns_solver_meth_2.f90  amr_linit_2D.f90  amr_linit_3D.f90  amr_linit_vitesse_2D.f90  amr_linit_vitesse_3D.f90  amr_navig.f90  amr_trans.f90  amr_trans_elli.f90  amr_verifs.f90  derinterp2.f90  getval.f90  init_amr.f90  init_hgs.f90  interpq1.f90  l_amr_ghost_fc.f90  l_amr_ghost_fc_elli.f90  l_amr_ghost_ff.f90  l_amr_ghost_ff_elli.f90  l_build.f90  l_cluster.f90  l_connect.f90  l_flag.f90  l_metrics.f90  l_save_nsc.f90  m_dim.f90  m_grid.f90  m_run.f90  mc_cartGrid.f90  patch_cut.f90  patch_mrg.f90  patch_sav.f90  prnest.f90  solver_vfin_cgradg.f90  solver_vfin_cgradg_elli.f90  usr_sensor_2D.f90  usr_sensor_3D.f90
src/base/commun/: CMakeLists.txt  ave.f90  entier.f90  fer_files_res.f90  lec_jdd.f90  ouv_files_res.f90  part.f90  reel.f90  reshape.f90
src/base/diffusion/: CMakeLists.txt  DAXPY.f90  DCG.f90  DCOPY.f90  DDOT.f90  DNRM2.f90  ISDCG.f90  MULTMATVEC_2D.f90  MULTMATVEC_3D.f90  amr_SndMembre.f90  amr_calcul_grad_phi_2D.f90  amr_calcul_grad_phi_3D.f90  calcul_du_coefficient_de_dilatation.f90  calcul_volume_de_fluide_1.f90  mazf.f90
src/base/interface/: CMakeLists.txt  amr_loc.f90  interface_amr_hyperbolique.f90  loc_amr.f90  solver_define.f90  solver_undefine.f90  unpack_g.f90  unpack_s.f90  unpack_v.f90
src/base/visualisation/: CMakeLists.txt  amr_plt_paraview_NODE_with_VTK.f90  amr_plt_paraview_NODE_without_VTK.f90  myVtkXMLWriterC.cxx  s_vertex_U.f90  s_vertex_V.f90  s_vertex_W.f90  s_vertex_YY.f90  vtkXMLWriterF.c
src/base/visualisation/include/: myVtkXMLWriterC.h  vtkXMLWriterF.h
src/users/: CMakeLists.txt  us_bound_cond.f90  us_critere_raffinement.f90  us_init_advection.f90  us_init_bulle.f90  us_miseajour_advection.f90
