# nom du projet
PROJECT(TritonAMR C CXX Fortran Java)
# version minimum de cmake
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(SRC_DIR ${TritonAMR_SOURCE_DIR}/src)
SET(MOD_DIR ${TritonAMR_SOURCE_DIR}/modules)
SET(IHM_DIR ${TritonAMR_SOURCE_DIR}/ihm)
set(CMAKE_Fortran_MODULE_DIRECTORY ${TritonAMR_BINARY_DIR}/modules)
SET(EXEMPLES_DIR ${TritonAMR_SOURCE_DIR}/examples)
SET(SCRIPTS_DIR ${TritonAMR_SOURCE_DIR}/scripts)

ADD_SUBDIRECTORY(${MOD_DIR})
ADD_SUBDIRECTORY(${SRC_DIR})
#ADD_SUBDIRECTORY(${IHM_DIR})

INSTALL(FILES ${SCRIPTS_DIR}/tritonAMR.py DESTINATION ${CMAKE_INSTALL_PREFIX}/scripts PERMISSIONS 
    OWNER_WRITE OWNER_READ OWNER_EXECUTE
    GROUP_WRITE GROUP_READ GROUP_EXECUTE
    WORLD_WRITE WORLD_READ WORLD_EXECUTE )

INSTALL(DIRECTORY ${EXEMPLES_DIR} DESTINATION ${CMAKE_INSTALL_PREFIX})


