# nom du projet
PROJECT(TritonAMR C CXX Fortran)
# version minimum de cmake
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(SRC_BASE_COMMUN_DIR ${TritonAMR_SOURCE_DIR}/commun)
SET(SRC_BASE_ADVECTION_DIR ${TritonAMR_SOURCE_DIR}/advection)
SET(SRC_BASE_AMR_DIR ${TritonAMR_SOURCE_DIR}/amr)
SET(SRC_BASE_DIFFUSION_DIR ${TritonAMR_SOURCE_DIR}/diffusion)
SET(SRC_BASE_INTERFACE_DIR ${TritonAMR_SOURCE_DIR}/interface)
SET(SRC_BASE_VISUALISATION_DIR ${TritonAMR_SOURCE_DIR}/visualisation)


ADD_SUBDIRECTORY(${SRC_BASE_COMMUN_DIR})
ADD_SUBDIRECTORY(${SRC_BASE_ADVECTION_DIR})
ADD_SUBDIRECTORY(${SRC_BASE_DIFFUSION_DIR})
ADD_SUBDIRECTORY(${SRC_BASE_AMR_DIR})
ADD_SUBDIRECTORY(${SRC_BASE_INTERFACE_DIR})
ADD_SUBDIRECTORY(${SRC_BASE_VISUALISATION_DIR})

ADD_EXECUTABLE(tritonAMR main.f90)
TARGET_LINK_LIBRARIES(tritonAMR modules commun amr advection diffusion interface visualisation users) 
INSTALL(TARGETS tritonAMR DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)



